Kuberntes_Resources/Ingress_Context_PathBased_Routing/Ingress-Context_Pathbased_Routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations: 
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /app1
        backend:
          service:
            name: app1-nginx-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /app2
        backend:
          service:
            name: app2-nginx-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: usrmgmt-webapp-service
            port: 
              number: 80
